Switched to using new Java 9 helper method.